--- a/src/components/Pages/MainPage/AboutUsSlide/Gallery/GalleryImage/GalleryImage.module.scss
+++ b/src/components/Pages/MainPage/AboutUsSlide/Gallery/GalleryImage/GalleryImage.module.scss
@@ -1,5 +1,7 @@
+@use 'breakpoints' as *;
+
 .galleryItem {
-  border-radius: 40px;
   overflow: hidden;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); 
+  @include responsive-block((border-radius: 40px));
+  @include responsive-shadow(0px, 0px, 5px, rgba(0, 0, 0, 0.2));
 }
