--- a/src/components/Common/ContactFormModal/ContactFormModal.module.scss
+++ b/src/components/Common/ContactFormModal/ContactFormModal.module.scss
@@ -1,3 +1,5 @@
+@use 'breakpoints' as *;
+
 .contactFormModalWrapper {
   display: flex;
   flex-direction: column;
@@ -8,24 +10,38 @@
   transform: translate(-50%, -50%);
   z-index: 100;
 
+  .logoWrapper {
+    @include responsive-block((
+      width: 80px,
+      height: 80px,
+      margin-bottom: -40px
+    ));
+
+    .logoImage {
+      @include responsive-block((
+        width: 60px,
+        height: 60px
+      ));
+    }
+  }
+
   .content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 455px;
-    padding: 32px 24px 32px 24px;
     background-color: #FFFFF0;
-    border-radius: 40px;
-    gap: 20px;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
     position: relative;
+    
+    @include responsive-block((
+      width: 455px,
+      border-radius: 40px,
+      gap: 20px
+    ));
+    @include responsive-4(padding, 32px, 24px, 32px, 24px);
 
     .closeButton {
       position: absolute;
-      top: -17px;
-      right: -14px;
-      width: 50px;
-      height: 50px;
       border: none;
       background: transparent;
       padding: 0;
@@ -34,38 +50,46 @@
       align-items: center;
       justify-content: center;
       transition: transform 0.2s ease;
+      
+      @include responsive-block((
+        top: -17px,
+        right: -14px,
+        width: 50px,
+        height: 50px
+      ));
 
       &:hover {
         transform: scale(1.1);
       }
 
       .closeIcon {
-        width: 50px;
-        height: 50px;
+        @include responsive-block((
+          width: 50px,
+          height: 50px
+        ));
       }
     }
 
     .header {
       text-align: center;
       align-content: center;
-      height: 84px;
+      @include responsive-block((height: 84px));
 
       .title {
         font-family: var(--tactic-sans-bold), sans-serif;
-        font-size: 16px;
         font-weight: 700;
         color: #1A2344;
         justify-content: center;
-        
         text-transform: uppercase;
+        @include responsive-block((font-size: 16px));
       }
 
       .subtitle {
         font-family: var(--montserrat), sans-serif;
-        font-size: 22px;
         font-weight: 500;
         color: #457B9D;
         margin: 0;
+        @include responsive-block((font-size: 22px));
       }
     }
 
@@ -73,13 +97,13 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      gap: 20px;
+      @include responsive-block((gap: 20px));
 
       .infoText {
         font-family: var(--montserrat), sans-serif;
-        font-size: 20px;
         color: #1A2344;
         text-align: center;
+        @include responsive-block((font-size: 20px));
 
         .link {
           color: #457B9D;
@@ -93,16 +117,20 @@
 
       .submitButton {
         width: 100%;
-        padding: 24px;
         border: none;
         border-radius: 100px;
         background-color: #D91722;
         color: #FFFFF0;
         font-family: var(--tactic-sans-bold), sans-serif;
-        font-size: 18px;
         font-weight: 700;
         cursor: pointer;
         transition: background-color 0.2s ease;
+        
+        @include responsive-block((
+          padding: 24px,
+          font-size: 18px,
+          margin-top: 8px
+        ));
 
         &:hover {
           background-color: #B8131D;
@@ -116,87 +144,19 @@
 
       .errorText {
         font-family: var(--montserrat), sans-serif;
-        font-size: 16px;
         color: #D91722;
         text-align: center;
+        @include responsive-block((font-size: 16px));
       }
 
       .successText {
         font-family: var(--tactic-sans-bold), sans-serif;
-        font-size: 16px;
         font-weight: 700;
         color: rgb(168, 218, 220);
         text-align: center;
         text-transform: uppercase;
+        @include responsive-block((font-size: 16px));
       }
     }
   }
 }
-
-@media (max-width: 1366px) and (max-height: 820px) {
-  .contactFormModalWrapper {
-    .logoWrapper {
-      width: 80px * 0.67;
-      height: 80px * 0.67;
-      margin-bottom: -40px * 0.67;
-
-      .logoImage {
-        width: 60px * 0.67;
-        height: 60px * 0.67;
-      }
-    }
-
-    .content {
-      width: 445px * 0.67;
-      padding: (32px * 0.67) (24px * 0.67) (32px * 0.67) (24px * 0.67);
-      border-radius: 40px * 0.67;
-      gap: 20px * 0.67;
-
-      .closeButton {
-        top: -17px * 0.67;
-        right: -14px * 0.67;
-        width: 50px * 0.67;
-        height: 50px * 0.67;
-
-        .closeIcon {
-          width: 50px * 0.67;
-          height: 50px * 0.67;
-        }
-      }
-
-      .header {
-        height: 84px * 0.67;
-
-        .title {
-          font-size: 16px * 0.67;
-        }
-
-        .subtitle {
-          font-size: 22px * 0.67;
-        }
-      }
-
-      .form {
-        gap: 16px * 0.67;
-
-        .infoText {
-          font-size: 20px * 0.67; 
-        }
-
-        .submitButton {
-          padding: 24px * 0.67;
-          font-size: 18px * 0.67;
-          margin-top: 8px * 0.67;
-        }
-
-        .errorText {
-          font-size: 16px * 0.67;
-        }
-        .successText {
-          font-size: 16px * 0.67;
-        }
-      }
-    }
-  }
-}
-
