--- a/src/components/Common/Input/Input.module.scss
+++ b/src/components/Common/Input/Input.module.scss
@@ -1,3 +1,5 @@
+@use 'breakpoints' as *;
+
 .inputGroup {
   display: flex;
   flex-direction: column;
@@ -6,27 +8,33 @@
     display: flex;
     align-items: center;
     font-family: var(--montserrat), sans-serif;
-    font-size: 20px;
     font-weight: 600;
     color: #1A2344;
-    margin-left: 16px;
-    height: 42px;
+    
+    @include responsive-block((
+      font-size: 20px,
+      margin-left: 16px,
+      height: 42px
+    ));
   }
 
   .input {
     display: flex;
     width: 100%;
-    height: 42px;
     align-items: center;
-    padding-left: 16px;
     border: none;
-    border-radius: 40px;
     background-color: #A8DADC;
     font-family: var(--montserrat), sans-serif;
-    font-size: 18px;
     color: #1A2344;
     outline: none;
     transition: box-shadow 0.2s ease;
+    
+    @include responsive-block((
+      height: 42px,
+      padding-left: 16px,
+      border-radius: 40px,
+      font-size: 18px
+    ));
 
     &::placeholder {
       color: rgba(26, 35, 68, 0.5);
@@ -37,22 +45,3 @@
     }
   }
 }
-
-@media (max-width: 1366px) and (max-height: 820px) {
-  .inputGroup {
-
-    .label {
-      font-size: 20px * 0.67;
-      margin-left: 16px * 0.67;
-      height: 42px * 0.67;
-    }
-
-    .input {
-      height: 42px * 0.67;
-      padding-left: 16px * 0.67;
-      border-radius: 40px * 0.67;
-      font-size: 18px * 0.67;
-    }
-  }
-}
-
