--- a/src/components/Common/NavigationMenu/NavigationMenu.module.scss
+++ b/src/components/Common/NavigationMenu/NavigationMenu.module.scss
@@ -1,16 +1,12 @@
-.navigationMenuClosedWrapper{
-	display: flex;
-	position: fixed;
-	z-index: 9;
-	top: 18px;
-	left: 50%;
-	transform: translateX(-50%);
-	pointer-events: none;
-	cursor: default;
-}
+@use 'breakpoints' as *;
 
-@media (max-width: 1366px) and (max-height: 820px) {
-  .navigationMenuClosedWrapper {
-    top: 18px * 0.67;
-  }
+.navigationMenuClosedWrapper{
+  display: flex;
+  position: fixed;
+  z-index: 9;
+  left: 50%;
+  transform: translateX(-50%);
+  pointer-events: none;
+  cursor: default;
+  @include responsive-block((top: 18px));
 }
