--- a/src/components/Common/NavigationMenu/NavigationMenuButton/NavigationMenuButton.module.scss
+++ b/src/components/Common/NavigationMenu/NavigationMenuButton/NavigationMenuButton.module.scss
@@ -1,26 +1,22 @@
-.navigationMenuButton{
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-	width: 168px;
-	height: 77px;
-	border-radius: 40px;
-	background-color: rgb(255, 255, 240, 1);
-	transition: background-color 0.3s ease;
-	backdrop-filter: blur(10px);
-	padding: 0 13px;
-	
-	&:hover{
-		background-color: rgb(255, 255, 240, 1);
-	}
-}
+@use 'breakpoints' as *;
 
-@media (max-width: 1366px) and (max-height: 820px) {
-  .navigationMenuButton {
-    width: 168px * 0.67;
-		height: 77px * 0.67;
-		border-radius: 40px * 0.67;
-		padding: 0 13px * 0.67;
+.navigationMenuButton{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(255, 255, 240, 1);
+  transition: background-color 0.3s ease;
+  backdrop-filter: blur(10px);
+  
+  @include responsive-block((
+    width: 168px,
+    height: 77px,
+    border-radius: 40px
+  ));
+  @include responsive-2(padding, 0px, 13px);
+  
+  &:hover{
+    background-color: rgb(255, 255, 240, 1);
   }
 }
