--- a/src/components/Common/NavigationMenu/NavigationModal/NavigationModal.module.scss
+++ b/src/components/Common/NavigationMenu/NavigationModal/NavigationModal.module.scss
@@ -1,12 +1,17 @@
+@use 'breakpoints' as *;
+
 .navigationModalWrapper{
-	display: flex;
-	position: fixed;
-	top: 66px;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 336px;
-	height: 456px;
-	gap: 10px;
+  display: flex;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  
+  @include responsive-block((
+    top: 66px,
+    width: 336px,
+    height: 456px,
+    gap: 10px
+  ));
 
   .topContentWrapper{
     display: flex;
@@ -21,32 +26,37 @@
       align-items: center;
       position: absolute;
       transform-origin: center;
-      width: 296px;
-      height: 100px;
       background-color: #FFFFF0;
-      border-radius: 100px;
       box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
       z-index: 10;
-      padding: 0 24px;
       cursor: pointer;
       overflow: hidden;
+      
+      @include responsive-block((
+        width: 296px,
+        height: 100px,
+        border-radius: 100px
+      ));
+      @include responsive-2(padding, 0px, 24px);
 
       .logoImageWrapper{
         display: flex;
-        min-width: 66px;
-        min-height: 66px;
+        
+        @include responsive-block((
+          min-width: 66px,
+          min-height: 66px
+        ));
       
         .logoImage {
           width: 100%;
           height: 100%;
         }
-        
       }
       
       .logoTextWrapper{
         display: flex;
-        width: 170px;
         height: auto;
+        @include responsive-block((width: 170px));
         
         .logoText { 
           width: 100%;
@@ -57,9 +67,12 @@
       .logoArrowWrapper{
         display: flex;
         position: absolute;
-        width: 41px;
-        left: 111px;
         height: auto;
+        
+        @include responsive-block((
+          width: 41px,
+          left: 111px
+        ));
         
         .logoArrow { 
           width: 100%;
@@ -69,91 +82,46 @@
     }
   }
 
-	.content{
-		display: flex;
-		flex-direction: column;
+  .content{
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
-		width: 100%;
-		height: 100%;
-		padding: 16px 0 ;
-		gap: 10px;
-    border: 4px solid #FFFFF0;
-    border-radius: 40px;
+    width: 100%;
+    height: 100%;
+    border-style: solid;
+    border-color: #FFFFF0;
     pointer-events: none;
     background-color: rgba(26, 35, 68, 0.75);
     backdrop-filter: blur(10px);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
-
-		.modalRow{
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			width: 100%;
-			height: 63px;
-      min-height: 63px;
-
-			.text{
-				color: #FFFFF0;
-				font-family: var(--tactic-sans-medium), sans-serif;
-				font-weight: 500;
-				text-align: center;
-				font-size: 20px;
-				cursor: pointer;
-        pointer-events: auto;
-			}
-		}
-	}
-	
-}
-
-@media (max-width: 1366px) and (max-height: 820px) {
-  .navigationModalWrapper{
-    top: 66px * 0.67;
-    width: 336px * 0.67;
-    height: 456px * 0.67;
-    gap: 10px * 0.67;
-  
-    .topContentWrapper{
-  
-      .topElement{
-        width: 296px * 0.67;
-        height: 100px * 0.67;
-        border-radius: 100px * 0.67;
-        box-shadow: 0px 0px 4px * 0.67 0px rgba(0, 0, 0, 0.25);
-        padding: 0 24px * 0.67;
-  
-        .logoImageWrapper{
-          min-width: 66px * 0.67;
-          min-height: 66px * 0.67;
-          
-        }
-        
-        .logoTextWrapper{
-          width: 170px * 0.67;
-        }
-        
-        .logoArrowWrapper{
-          width: 41px * 0.67;
-          left: 111px * 0.67;
-        }
-      }
-    }
-  
-    .content{
-      padding: 16px * 0.67 0 ;
-      gap: 10px * 0.67;
-      border: 4px * 0.67 solid #FFFFF0;
-      border-radius: 40px * 0.67;
-  
-      .modalRow{
-        height: 63px * 0.67;
-        min-height: 63px * 0.67;
-
-        .text{
-          font-size: 20px * 0.67;
-        }
-      }
-    }
     
+    @include responsive-block((
+      gap: 10px,
+      border-width: 4px,
+      border-radius: 40px
+    ));
+    @include responsive-2(padding, 16px, 0px);
+
+    .modalRow{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      
+      @include responsive-block((
+        height: 63px,
+        min-height: 63px
+      ));
+
+      .text{
+        color: #FFFFF0;
+        font-family: var(--tactic-sans-medium), sans-serif;
+        font-weight: 500;
+        text-align: center;
+        cursor: pointer;
+        pointer-events: auto;
+        @include responsive-block((font-size: 20px));
+      }
+    }
   }
 }
