--- a/src/components/Common/PersonBlock/ClosedPersonBlock/ClosedPersonBlock.module.scss
+++ b/src/components/Common/PersonBlock/ClosedPersonBlock/ClosedPersonBlock.module.scss
@@ -1,16 +1,24 @@
+@use 'breakpoints' as *;
+
 .closedPersonBlock{
   display: flex;
   flex-direction: column;
-  width: 297px;
-  gap: 20px;
   cursor: pointer;
+  
+  @include responsive-block((
+    width: 297px,
+    gap: 20px
+  ));
 
   .imageBlock{
     overflow: hidden;
     position: relative;
     width: 100%;
-    height: 272px;
-    border-radius: 40px;
+    
+    @include responsive-block((
+      height: 272px,
+      border-radius: 40px
+    ));
 
     .image{
       object-fit: cover;
@@ -18,6 +26,10 @@
       max-width: unset;
       max-height: unset;
       pointer-events: none;
+
+      @include laptops-down {
+        transform: scale($scale-laptop);
+      }
     }
   }
 
@@ -26,32 +38,14 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    height: 126px;
     font-family: var(--tactic-sans-medium), sans-serif;
     font-weight: 500;
     text-align: center;
-    font-size: 18px;
     color: #A8DADC;
-  }
-}
-
-@media (max-width: 1366px) and (max-height: 820px) {
-  .closedPersonBlock{
-    width: 297px * 0.67;
-    gap: 20px * 0.67;
-  
-    .imageBlock{
-      height: 272px * 0.67;
-      border-radius: 40px * 0.67;
-  
-      .image{
-        transform: scale(0.67);
-      }
-    }
-  
-    .nameLine{
-      height: 126px * 0.67;
-      font-size: 18px * 0.67;
-    }
+    
+    @include responsive-block((
+      height: 126px,
+      font-size: 18px
+    ));
   }
 }
