--- a/src/components/Common/PersonBlock/OpenedPersonBlock/OpenedPersonBlock.module.scss
+++ b/src/components/Common/PersonBlock/OpenedPersonBlock/OpenedPersonBlock.module.scss
@@ -1,23 +1,31 @@
+@use 'breakpoints' as *;
+
 .openedPersonBlock{
   display: flex;
   flex-direction: row;
-  width: 772px;
-  padding: 32px;
-  gap: 20px;
   background-color: #fffff0;
-  border-radius: 40px;
+  
+  @include responsive-block((
+    width: 772px,
+    padding: 32px,
+    gap: 20px,
+    border-radius: 40px
+  ));
 
   .textBlock{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    @include responsive-block((gap: 20px));
 
     .textLine{
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      width: 417px;
-      height: 105px;
+      
+      @include responsive-block((
+        width: 417px,
+        height: 105px
+      ));
 
       .nameLine{
         display: flex;
@@ -26,8 +34,8 @@
         font-family: var(--tactic-sans-bold), sans-serif;
         font-weight: bold;
         text-align: left;
-        font-size: 16px;
         color: #457B9D;
+        @include responsive-block((font-size: 16px));
 
         .surname{
           color: #1A2344
@@ -39,10 +47,13 @@
   .imageBlock{
     overflow: hidden;
     position: relative;
-    width: 271px;
-    height: 354px;
-    border-radius: 28px;
     background-color: #1A2344;
+    
+    @include responsive-block((
+      width: 271px,
+      height: 354px,
+      border-radius: 28px
+    ));
 
     .image{
       object-fit: cover;
@@ -50,37 +61,9 @@
       max-width: unset;
       max-height: unset;
       pointer-events: none;
-    }
-  }
-}
 
-@media (max-width: 1366px) and (max-height: 820px) {
-  .openedPersonBlock{
-    width: 772px * 0.67;
-    padding: 32px * 0.67;
-    gap: 20px * 0.67;
-    border-radius: 40px * 0.67;
-  
-    .textBlock{
-      gap: 20px * 0.67;
-  
-      .textLine{
-        width: 417px * 0.67;
-        height: 105px * 0.67;
-  
-        .nameLine{
-          font-size: 16px * 0.67;
-        }
-      }
-    }
-    
-    .imageBlock{
-      width: 271px * 0.67;
-      height: 354px * 0.67;
-      border-radius: 28px * 0.67;
-  
-      .image{
-        transform: scale(0.67);
+      @include laptops-down {
+        transform: scale($scale-laptop);
       }
     }
   }
