--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,9 +1,11 @@
+@use 'breakpoints' as *;
+
 .footerWrapper{
   display: flex;
   flex-direction: column;
   position: relative;
   width: 100%;
-  height: 515px;
+  @include responsive-block((height: 515px));
   
   .backgroundWrapper{
     position: absolute;
@@ -34,8 +36,9 @@
     position: relative;
     z-index: 2;
     width: 100%;
-    padding: 180px 178px 0 178px;
-    gap: 378px;
+    
+    @include responsive-block((gap: 378px));
+    @include responsive-4(padding, 180px, 178px, 0px, 178px);
 
     .contentColumn{
       display: flex;
@@ -44,7 +47,7 @@
       .textContent{
         display: flex;
         flex-direction: column;
-        height: 77px;
+        @include responsive-block((height: 77px));
 
         .smallText{
           display: flex;
@@ -53,8 +56,8 @@
           align-items: flex-end;
           font-family: var(--montserrat), sans-serif;
           font-weight: normal;
-          font-size: 12px;
           color: #fffff0;
+          @include responsive-block((font-size: 12px));
         }
 
         .bigText{
@@ -64,13 +67,13 @@
           align-items: flex-start;
           font-family: var(--tactic-sans-medium), sans-serif;
           font-weight: 500;
-          font-size: 18px;
           color: #fffff0;
+          @include responsive-block((font-size: 18px));
         }
       }
 
       .mainIcon{
-        margin-top: 26px;
+        @include responsive-block((margin-top: 26px));
       }
 
       .linksLine{
@@ -78,45 +81,10 @@
         flex-direction: row;
         justify-content: flex-end;
         width: 100%;
-        gap: 16px;
+        @include responsive-block((gap: 16px));
 
         .icon{
           cursor: pointer;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 1366px) and (max-height: 820px) {
-  .footerWrapper{
-    height: 515px * 0.67;
-  
-    .content {
-      padding: 180px * 0.67 178px * 0.67 0 178px * 0.67;
-      gap: 378px * 0.67;
-  
-      .contentColumn{
-  
-        .textContent{
-          height: 77px * 0.67;
-  
-          .smallText{
-            font-size: 12px * 0.67;
-          }
-  
-          .bigText{
-            font-size: 18px * 0.67;
-          }
-        }
-  
-        .mainIcon{
-          margin-top: 26px * 0.67;
-        }
-  
-        .linksLine{
-          gap: 16px * 0.67;
-  
         }
       }
     }
