--- a/src/components/Pages/MainPage/AboutUsSlide/AboutUsSlide.module.scss
+++ b/src/components/Pages/MainPage/AboutUsSlide/AboutUsSlide.module.scss
@@ -1,58 +1,46 @@
+@use 'breakpoints' as *;
+
 .aboutUsSlideWrapper{
   display: flex;
   flex-direction: row;
-  gap: 20px;
   justify-content: center;
-  margin-top: 300px;
+  @include responsive-block((
+    gap: 20px,
+    margin-top: 300px
+  ));
 
   .textInfoBlock{
     display: flex;
     overflow: hidden;
     flex-direction: column;
-    width: 772px;
-    padding: 60px 32px;
-    border-radius: 60px;
     background-color: #fffff0;
-    gap: 20px;
+    
+    @include responsive-block((
+      width: 772px,
+      border-radius: 60px,
+      gap: 20px
+    ));
+    @include responsive-2(padding, 60px, 32px);
 
     .contentRow{
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      min-height: 166px;
-      gap: 35px;
+      @include responsive-block((
+        min-height: 166px,
+        gap: 35px
+      ));
     }
   }
 
   .imageBlock{
     overflow: hidden;
     position: relative;
-    width: 772px;
-    height: 856px;
     background-color: transparent;
-  }
-}
-
-@media (max-width: 1366px) and (max-height: 820px) {
-  .aboutUsSlideWrapper{
-    gap: 20px * 0.67;
-    margin-top: 300px * 0.67;
-  
-    .textInfoBlock{
-      width: 772px * 0.67;
-      padding: 60px * 0.67 32px * 0.67;
-      border-radius: 60px * 0.67;
-      gap: 20px * 0.67;
-  
-      .contentRow{
-        min-height: 166px * 0.67;
-        gap: 35px * 0.67;
-      }
-    }
-  
-    .imageBlock{
-      width: 772px * 0.67;
-      height: 856px * 0.67;
-    }
+    
+    @include responsive-block((
+      width: 772px,
+      height: 856px
+    ));
   }
 }
