--- a/src/components/Pages/MainPage/CallToActionSlide/CallToActionSlide.module.scss
+++ b/src/components/Pages/MainPage/CallToActionSlide/CallToActionSlide.module.scss
@@ -1,10 +1,15 @@
+@use 'breakpoints' as *;
+
 .callToActionSlideWrapper{
-	display:flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 500px;
-	margin-bottom: 180px;
   width: 100%;
+  
+  @include responsive-block((
+    margin-top: 500px,
+    margin-bottom: 180px
+  ));
 
   .slideLine{
     display: flex;
@@ -12,75 +17,50 @@
     align-content: center;
     justify-content: center;
 
-		.callToActionBlock{
-			display: flex;
-			flex-direction: column;
-			justify-content: flex-start;
-			width: 1247px;
-			height: 325px;
-			padding: 32px 18px;
-			box-shadow: 0px 4px 18px rgba(69, 123, 157, 0.25);
-			border-radius: 40px;
-			background: url('../../../../../assets/png/call_to_action_bg.png') center;
-			gap: 20px;
+    .callToActionBlock{
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      background: url('../../../../../assets/png/call_to_action_bg.png') center;
+      
+      @include responsive-block((
+        width: 1247px,
+        height: 325px,
+        border-radius: 40px,
+        gap: 20px
+      ));
+      @include responsive-2(padding, 32px, 18px);
+      @include responsive-shadow(0px, 4px, 18px, rgba(69, 123, 157, 0.25));
 
-			.blockLine{
-				display: flex;
-				flex-direction: row;
-				justify-content: flex-start;
-				align-items: center;
-				width: 807px;
-				gap: 13px;
+      .blockLine{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        
+        @include responsive-block((
+          width: 807px,
+          gap: 13px
+        ));
 
-				.titleText{
-					color: #fffff0;
-					font-family: var(--tactic-sans-medium), sans-serif;
-					font-weight: 500;
-					font-size: 26px;
-				}
+        .titleText{
+          color: #fffff0;
+          font-family: var(--tactic-sans-medium), sans-serif;
+          font-weight: 500;
+          @include responsive-block((font-size: 26px));
+        }
 
-				.mainText{
-					width: 605px;
-					color: #fffff0;
-					font-family: var(--montserrat), sans-serif;
-					font-weight: 500;
-					font-size: 20px;
-				}
-			}
-		}
+        .mainText{
+          color: #fffff0;
+          font-family: var(--montserrat), sans-serif;
+          font-weight: 500;
+          
+          @include responsive-block((
+            width: 605px,
+            font-size: 20px
+          ));
+        }
+      }
+    }
   }
-}
-
-/* Laptop adaptations */
-@media (max-width: 1366px) {
-  .callToActionSlideWrapper{
-		margin-top: 500px * 0.67;
-		margin-bottom: 180px * 0.67;
-	
-		.slideLine{
-	
-			.callToActionBlock{
-				width: 1247px * 0.67;
-				height: 325px * 0.67;
-				padding: 32px * 0.67 18px * 0.67;
-				box-shadow: 0px 4px * 0.67 18px * 0.67 rgba(69, 123, 157, 0.25);
-				border-radius: 40px * 0.67;
-				gap: 20px * 0.67;
-	
-				.blockLine{
-					width: 807px * 0.67;
-					gap: 13px * 0.67;
-	
-					.titleText{
-						font-size: 26px * 0.67;
-					}
-	
-					.mainText{
-						width: 605px * 0.67;
-						font-size: 20px * 0.67;
-					}
-				}
-			}
-		}
-	}
 }
