--- a/src/components/Pages/MainPage/FirstSlide/BottomContent/BottomContent.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/BottomContent/BottomContent.module.scss
@@ -1,3 +1,5 @@
+@use 'breakpoints' as *;
+
 .bottomContent{
   display: flex;
   justify-content: center;
@@ -7,13 +9,7 @@
     font-family: var(--tactic-sans-regular), sans-serif;
     font-weight: normal;
     text-wrap: nowrap;
-    font-size: 16px;
     color: #fffff0;
-  }
-}
-
-@media (max-width: 1366px) and (max-height: 820px) {
-  .bottomContent {
-    .buttonText { font-size: 14px; }
+    @include responsive-block((font-size: 16px));
   }
 }
