--- a/src/components/Pages/MainPage/FirstSlide/FrameContent/FrameContent.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/FrameContent/FrameContent.module.scss
@@ -1,22 +1,27 @@
+@use 'breakpoints' as *;
+
 .topElement{
   position: absolute;
   left: 50%;
-  top: 52px;
   transform: translateX(-50%);
   z-index: 10;
+  @include responsive-block((top: 52px));
 
   .topElementContent{
     position: relative;
     overflow: hidden;
-    padding: 0 22px;
-    width: 341px;
-    height: 114px;
     background-color: #FFFFF0;
-    border-radius: 100px;
     border: 2px solid #FFFFF0;
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    @include responsive-block((
+      width: 341px,
+      height: 114px,
+      border-radius: 100px
+    ));
+    @include responsive-2(padding, 0px, 22px);
   }
 }
 
@@ -24,28 +29,32 @@
   display: flex;
   position: relative;
   width: 100%;
-  border: 4px solid #FFFFF0;
-  border-radius: 100px;
+  border-style: solid;
+  border-color: #FFFFF0;
   box-sizing: border-box;
-
+  
+  @include responsive-block((
+    border-width: 4px,
+    border-radius: 100px
+  ));
   
   .bottomElement {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    width: 295px;
-    height: 77px;
     background-color: #D91722;
-    border-radius: 50px;
     border: 2px solid #FFFFF0;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-  }
-
-  .bottomElement {
-    bottom: -39px;
+    
+    @include responsive-block((
+      width: 295px,
+      height: 77px,
+      border-radius: 50px,
+      bottom: -39px
+    ));
   }
 
   .content {
@@ -53,29 +62,3 @@
     flex-direction: row;
   }
 }
-
-@media (max-width: 1366px) and (max-height: 820px) {
-
-  .topElement{
-    top: 52px * 0.67;
-  
-    .topElementContent{
-      width: 341px * 0.67;
-      height: 114px * 0.67;
-      padding: 0 24px * 0.67 - 2;
-    }
-  }
-
-  .frameContainer {
-    border-width: 3px;
-    border-radius: 67px;
-    
-    .bottomElement {
-      width: 260px;
-      height: 68px;
-      border-radius: 44px;
-      bottom: -34px;
-    }
-  }
-}
-
