--- a/src/components/Pages/MainPage/FirstSlide/TopContent/TopContent.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/TopContent/TopContent.module.scss
@@ -1,26 +1,30 @@
+@use 'breakpoints' as *;
+
 .topContentWrapper{
   display: flex;
   align-items: center;
   flex-direction: row;
-  gap: 10px;
+  @include responsive-block((gap: 10px));
 }
 
-.logoWrapper{
+.logoImageWrapper{
   display: flex;
-  width: 80px;
-  height: 80px;
+  
+  @include responsive-block((
+    width: 80px,
+    height: 80px
+  ));
 
   .logoImage {
     width: 100%;
     height: 100%;
   }
-  
 }
 
 .logoTextWrapper{
   display: flex;
-  width: 203px;
   height: auto;
+  @include responsive-block((width: 203px));
   
   .logoText { 
     width: 100%;
@@ -31,45 +35,15 @@
 .logoArrowWrapper{
   display: flex;
   position: absolute;
-  width: 41px;
-  left: 441px;
   height: auto;
+  
+  @include responsive-block((
+    width: 41px,
+    left: 441px
+  ));
   
   .logoArrow { 
     width: 100%;
     height: auto;
-  }
-}
-
-@media (max-width: 1366px) {
-  .topContentWrapper{
-    gap: 10px * 0.67;
-  }
-
-  .logoImageWrapper{
-    width: 80px * 0.67;
-    height: 80px * 0.67;
-
-    .logoImage {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  .logoTextWrapper{
-    width: 203px * 0.67;
-
-    .logoText { 
-      width: 100%;
-    }
-  }
-
-  .logoArrowWrapper{
-    width: 41px * 0.67;
-    left: 441px * 0.67;
-    
-    .logoArrow { 
-      width: 100%;
-    }
   }
 }
