--- a/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ArrowBlock/ArrowBlock.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ArrowBlock/ArrowBlock.module.scss
@@ -1,37 +1,29 @@
+@use 'breakpoints' as *;
+
 .newArrowBlock {
-	position: relative;
-	width: 90px;
-	height: 130px;
+  position: relative;
+  
+  @include responsive-block((
+    width: 90px,
+    height: 130px
+  ));
 
-	.arrowContainer {
-		position: absolute;
-		left: 0;
-		right: 0;
-		margin: 0 auto;
-		width: 78px;
-		height: 65px;
-		display: inline-block;
-		background-color: #a8dadc;
-		-webkit-mask-image: url('../../../../../../../assets/svg/arrow.svg');
-		mask-image: url('../../../../../../../assets/svg/arrow.svg');
-		mask-repeat: no-repeat;
-		mask-size: contain;
-		mask-position: center;
-	}
+  .arrowContainer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    display: inline-block;
+    background-color: #a8dadc;
+    -webkit-mask-image: url('../../../../../../../assets/svg/arrow.svg');
+    mask-image: url('../../../../../../../assets/svg/arrow.svg');
+    mask-repeat: no-repeat;
+    mask-size: contain;
+    mask-position: center;
+    
+    @include responsive-block((
+      width: 78px,
+      height: 65px
+    ));
+  }
 }
-
-@media (max-width: 1366px) and (max-height: 820px) {
-	.newArrowBlock {
-		width: 90px * 0.67;
-		height: 130px * 0.67;
-
-		.arrowContainer {
-			left: 0;
-			right: 0;
-			margin: 0 auto;
-			width: 78px * 0.67;
-			height: 65px * 0.67;
-		}
-	}
-}
-
