--- a/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ElseOfferInfo/ElseOfferInfo.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ElseOfferInfo/ElseOfferInfo.module.scss
@@ -1,20 +1,28 @@
+@use 'breakpoints' as *;
+
 .elseOfferInfoWrapper {
   display: flex;
   flex-direction: column;
-  width: 613px;
-  height: 710px;
   background-color: #fffff0;
-  border-radius: 40px;
-  padding: 32px;
-  gap: 20px;
+  
+  @include responsive-block((
+    width: 613px,
+    height: 710px,
+    border-radius: 40px,
+    padding: 32px,
+    gap: 20px
+  ));
 
   .imageBlock {
     overflow: hidden;
     position: relative;
     width: 100%;
-    height: 246px;
-    border-radius: 40px;
     background-color: aqua;
+    
+    @include responsive-block((
+      height: 246px,
+      border-radius: 40px
+    ));
 
     .image {
       object-fit: cover;
@@ -22,35 +30,37 @@
       max-width: unset;
       max-height: unset;
       pointer-events: none;
+
+      @include laptops-down {
+        transform: scale($scale-laptop);
+      }
     }
   }
 
   .blockLine {
     display: flex;
     width: 100%;
-    height: 114px;
+    @include responsive-block((height: 114px));
 
     .buttonWrapper {
       display: flex;
       flex-direction: row;
       background-color: #D91722;
-      border-radius: 50px;
       justify-content: space-evenly;
       align-items: center;
       width: 75%;
       height: 75%;
       cursor: pointer;
+      @include responsive-block((border-radius: 50px));
 
       .buttonText {
-        font-size: 24px;
         font-family: var(--tactic-sans-bold), sans-serif;
         font-weight: bold;
         color: #A8DADC;
+        @include responsive-block((font-size: 24px));
       }
 
       .arrowContainer {
-        width: 40px;
-        height: 24px;
         display: inline-block;
         background-color: #a8dadc;
         -webkit-mask-image: url('../../../../../../../assets/svg/buttons_arrow.svg');
@@ -58,47 +68,16 @@
         mask-repeat: no-repeat;
         mask-size: contain;
         mask-position: center;
+        
+        @include responsive-block((
+          width: 40px,
+          height: 24px
+        ));
       }
     }
   }
 
   .mirror {
     justify-content: flex-end;
-  }
-}
-
-@media (max-width: 1366px) and (max-height: 820px) {
-  .elseOfferInfoWrapper {
-    width: 613px * 0.67;
-    height: 710px * 0.67;
-    border-radius: 40px * 0.67;
-    padding: 32px * 0.67;
-    gap: 20px * 0.67;
-  
-    .imageBlock {
-      height: 246px * 0.67;
-      border-radius: 40px * 0.67;
-  
-      .image {
-        transform: scale(0.67);
-      }
-    }
-  
-    .blockLine {
-      height: 114px * 0.67;
-  
-      .buttonWrapper {
-        border-radius: 50px * 0.67;
-  
-        .buttonText {
-          font-size: 24px * 0.67;
-        }
-  
-        .arrowContainer {
-          width: 40px * 0.67;
-          height: 24px * 0.67;
-        }
-      }
-    }
   }
 }
