--- a/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ElseOffersItem.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ElseOffersItem.module.scss
@@ -1,38 +1,32 @@
+@use 'breakpoints' as *;
+
 .youWillFindInfoWrapper {
-	display: flex;
-	flex-direction: column;
-	
-	.titleWrapper {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		width: 613px;
-		height: 126px;
-		border-bottom: 3px solid #A8DADC;
-		box-sizing: border-box;
-		cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  
+  .titleWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 3px solid #A8DADC;
+    box-sizing: border-box;
+    cursor: pointer;
+    
+    @include responsive-block((
+      width: 613px,
+      height: 126px
+    ));
 
-		.arrowWrapper {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			width: 90px;
-			height: 96px;
-			overflow: hidden;
-		}
-	}
-}
-
-@media (max-width: 1366px) and (max-height: 820px) {
-	.youWillFindInfoWrapper {
-		.titleWrapper {
-			width: 613px * 0.67;
-			height: 126px * 0.67;
-
-			.arrowWrapper {
-				width: 90px * 0.67;
-				height: 96px * 0.67;
-			}
-		}
-	}
+    .arrowWrapper {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      
+      @include responsive-block((
+        width: 90px,
+        height: 96px
+      ));
+    }
+  }
 }
