--- a/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/TextBlock/TextBlock.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/TextBlock/TextBlock.module.scss
@@ -1,43 +1,36 @@
+@use 'breakpoints' as *;
+
 .textBlock {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 
-	.allSubtitles {
-		display: flex;
-		flex-direction: row;
-		padding-left: 3px;
-		width: 100%;
-		font-family: var(--montserrat), sans-serif;
-		font-weight: normal;
-		font-size: 22px;
-		color: #fffff0;
-		line-height: 1;
-	}
+  .allSubtitles {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    font-family: var(--montserrat), sans-serif;
+    font-weight: normal;
+    color: #fffff0;
+    line-height: 1;
+    
+    @include responsive-block((
+      padding-left: 3px,
+      font-size: 22px
+    ));
+  }
 
-	.title {
-		display: flex;
-		min-height: 96px;
-		align-items: center;
-		font-family: var(--tactic-sans-medium), sans-serif;
-		font-weight: 500;
-		font-size: 40px;
-		color: #A8DADC;
-	}
+  .title {
+    display: flex;
+    align-items: center;
+    font-family: var(--tactic-sans-medium), sans-serif;
+    font-weight: 500;
+    color: #A8DADC;
+    
+    @include responsive-block((
+      min-height: 96px,
+      font-size: 40px
+    ));
+  }
 }
-
-@media (max-width: 1366px) and (max-height: 820px) {
-	.textBlock {
-		.allSubtitles {
-			padding-left: 3px * 0.67;
-			font-size: 22px * 0.67;
-		}
-
-		.title {
-			min-height: 96px * 0.67;
-			font-size: 40px * 0.67;
-		}
-	}
-}
-
