--- a/src/components/Pages/MainPage/OurOffersSlide/OfferCarousel/OfferCarousel.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/OfferCarousel/OfferCarousel.module.scss
@@ -1,10 +1,15 @@
+@use 'breakpoints' as *;
+
 .sliderContainer {
-  width: 1246px;
-  max-width: 1246px; 
   margin: 0 auto;
   position: relative;
   overflow: hidden;
-  height: 564px;
+  
+  @include responsive-block((
+    width: 1246px,
+    max-width: 1246px,
+    height: 564px
+  ));
 }
 
 .sliderWrapper {
@@ -15,21 +20,24 @@
 
 .slide {
   flex-shrink: 0;
-  width: 389px;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #457B9D;
-  border-radius: 40px;
-  font-size: 20px;
   color: white;
   box-sizing: border-box;
   transition: transform 0.3s ease, opacity 0.3s ease, filter 0.3s ease, box-shadow 0.3s ease;
   position: relative;
   opacity: 0.7;
   filter: blur(2px);
+  
+  @include responsive-block((
+    width: 389px,
+    border-radius: 40px,
+    font-size: 20px
+  ));
 }
 
 .slide.active {
@@ -37,8 +45,8 @@
   transform: scale(1);
   filter: blur(0px);
   z-index: 1;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   cursor: pointer;
+  @include responsive-shadow(0px, 5px, 15px, rgba(0, 0, 0, 0.3));
 }
 
 .slide.prev {
@@ -70,8 +78,6 @@
   cursor: pointer;
   z-index: 10;
   transition: background-color 0.3s ease;
-  width: 95px;
-  height: 95px; 
   display: inline-block;
   -webkit-mask-image: url('../../../../../../assets/svg/carousel_arrow.svg');
   mask-image: url('../../../../../../assets/svg/carousel_arrow.svg');
@@ -79,48 +85,22 @@
   mask-size: contain;
   mask-position: center;
   
+  @include responsive-block((
+    width: 95px,
+    height: 95px
+  ));
+  
   &.prev {
-    left: 10px;
     top: 40%;
     transform: rotate(180deg);
+    @include responsive-block((left: 10px));
   }
 
   &.next {
-    right: 10px;
+    @include responsive-block((right: 10px));
   }
 
   &:hover {
     background-color: rgba(217, 23, 34, 1);
-  }
-}
-
-@media (max-width: 1366px) and (max-height: 820px) {
-  .sliderContainer {
-    width: 1246px * 0.67;
-    max-width: 1246px * 0.67; 
-    height: 564px * 0.67;
-  }
-  
-  .slide {
-    width: 389px * 0.67;
-    border-radius: 40px * 0.67;
-    font-size: 20px * 0.67;
-  }
-  
-  .slide.active {
-    box-shadow: 0 5px * 0.67 15px * 0.67 rgba(0, 0, 0, 0.3);
-  }
-  
-  .slider-button {
-    width: 95px * 0.67;
-    height: 95px * 0.67; 
-    
-    &.prev {
-      left: 10px * 0.67;
-    }
-  
-    &.next {
-      right: 10px * 0.67;
-    }
   }
 }
