fix main image bug

--- a/src/components/Pages/MobileMainPage/FirstSlide/FirstSlide.module.scss
+++ b/src/components/Pages/MobileMainPage/FirstSlide/FirstSlide.module.scss
@@ -5,22 +5,30 @@
   min-height: 100svh;
   overflow: hidden;
 
-  .backgroundImage {
+  .backgroundWrapper {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 0;
-    overflow: hidden;
-    filter: brightness(0.5);
-    transform-origin: center center;
-    will-change: transform, filter, width, height, border-radius;
+    clip-path: inset(0 0 0 0 round 0);
+    will-change: clip-path, opacity, transform;
+    backface-visibility: hidden;
 
-    img {
-      transform: scale(1);
-      transform-origin: center center;
-      will-change: transform;
+    .backgroundImage {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      filter: brightness(0.5);
+      will-change: filter;
+
+      img {
+        transform: translateZ(0);
+        backface-visibility: hidden;
+      }
     }
   }
 
@@ -48,6 +56,9 @@
       border-radius: 50px;
       padding: 152px 32px 95px;
       box-sizing: border-box;
+      transform: translateZ(0);
+      will-change: transform, opacity;
+      backface-visibility: hidden;
 
       .mainContent {
         display: flex;
@@ -63,6 +74,7 @@
           flex-direction: column;
           align-items: flex-start;
           gap: 8px;
+          will-change: opacity;
 
           span {
             display: flex;
@@ -83,6 +95,7 @@
           flex-direction: column;
           align-items: flex-start;
           gap: 16px;
+          will-change: opacity;
 
           p {
             font-family: var(--montserrat), sans-serif;
