--- a/src/components/Pages/MainPage/FirstSlide/FirstSlide.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/FirstSlide.module.scss
@@ -15,25 +15,30 @@
     color: white;
     @include responsive-4(padding, 108px, 178px, 205px, 178px);
   }
-  
-  .mainImage{
+
+  .backgroundWrapper {
     width: 100vw;
     height: 100vh;
     position: relative;
     overflow: hidden;
-    filter: brightness(0.5); 
+    filter: brightness(0.5);
 
-    .image {
-      object-fit: cover;
-      object-position: center;
+    .backgroundImage {
       width: 100%;
       height: 100%;
-      transform-origin: center;
-      max-width: unset;
-      max-height: unset;
-      pointer-events: none;
+      position: relative;
+
+      .image {
+        object-fit: cover;
+        object-position: center;
+        width: 100%;
+        height: 100%;
+        transform-origin: center;
+        max-width: unset;
+        max-height: unset;
+        pointer-events: none;
+      }
     }
-    
   }
 
   .mainContent{
