--- a/src/components/Pages/MainPage/FirstSlide/FirstSlide.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/FirstSlide.module.scss
@@ -21,7 +21,9 @@
     height: 100vh;
     position: relative;
     overflow: hidden;
-    filter: brightness(0.5);
+    clip-path: inset(0 0 0 0 round 0);
+    will-change: clip-path, transform, opacity;
+    transform: translateZ(0);
 
     .backgroundImage {
       width: 100%;
@@ -38,6 +40,18 @@
         max-height: unset;
         pointer-events: none;
       }
+    }
+
+    .darkOverlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      opacity: 0.5;
+      will-change: opacity;
+      pointer-events: none;
     }
   }
 
