--- a/src/components/Pages/MainPage/OurOffersSlide/OfferCarousel/CarouselSlider/CarouselSlider.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/OfferCarousel/CarouselSlider/CarouselSlider.module.scss
@@ -2,11 +2,28 @@
 
 .slideWrapper {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 100%;
   height: 100%;
   padding: 32px;
   gap: 20px;
+
+  .important {
+    position: absolute;
+    top: 0px;
+    right: 60px;
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
+
+    @include laptops-down {
+      top: scaled(0px);
+      right: scaled(60px);
+      width: scaled(24px);
+      height: scaled(24px);
+    }
+  }
 
   @include laptops-down {
     padding: scaled(32px);
@@ -47,6 +64,7 @@
     }
 
     .offerName {
+      margin: 0;
       text-align: center;
       font-size: 30px;
       font-family: var(--montserrat), sans-serif;
